--- a/state.html
+++ b/state.html
@@ -6,7 +6,11 @@
     <script>
         function myFunction() {
             fetch('http://192.168.0.16:3001/stateServers')
-            .then(data => console.log(data));
+            .then(response => response.text())
+            .then((response) => {
+            console.log(response)
+            })
+            .catch(err => console.log(err));
           document.getElementById("demo").innerHTML = "Paragraph changed.";
         }
     </script>
