--- a/state.html
+++ b/state.html
@@ -8,10 +8,11 @@
             fetch('http://192.168.0.16:3001/stateServers')
             .then(response => response.text())
             .then((response) => {
-            console.log(response)
+                console.log(response)
+                document.getElementById("demo").innerHTML = response;
             })
             .catch(err => console.log(err));
-          document.getElementById("demo").innerHTML = "Paragraph changed.";
+          
         }
     </script>
 </head>
